# portfolio-optimizer

./: .env.example  .gitignore  Dockerfile  README.md  build.gradle  cli.py  docker-compose.yml  locustfile.py  main.py  pyproject.toml  settings.gradle  watch_trades.py
.github/workflows/: ci.yaml
app/api/: auth.py  routes.py
app/models/: portfolio.py
app/services/: optimizer.py
argocd/: application.yaml
clickhouse/: init.sql
flink/jobs/: Dockerfile  build.gradle
flink/jobs/src/main/java/com/binance/flink/: OhlcvJob.java
flink/jobs/src/main/java/com/binance/flink/function/: OhlcvAggregator.java
grafana/provisioning/dashboards/: ohlcv.json
grafana/provisioning/datasources/: timescaledb.yaml
helm/: Chart.yaml  values.yaml
helm/crypto-monitor/: Chart.yaml  values.yaml
helm/crypto-monitor/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
helm/files/: timescaledb-init.sql
helm/portfolio-optimizer/: values.yaml
helm/templates/: _helpers.tpl  flink.yaml  grafana.yaml  kafka.yaml  producer.yaml  timescaledb.yaml
load-generator/: Dockerfile  build.gradle
load-generator/src/main/java/com/binance/loadgen/: LoadGenerator.java
pgadmin/: servers.json
producer/: config.py  health.py  kafka_client.py  main.py  models.py  ws_client.py
producer/src/main/java/com/binance/producer/ws/: BinanceWebSocketClient.java  CoinbaseWebSocketClient.java
tests/: conftest.py  test_models.py  test_optimizer.py  test_routes.py
timescaledb/: init.sql
(+2 files in other folders)
