[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["producer*"]

[project]
name = "crypto-monitor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "confluent-kafka>=2.5.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.0.0",
    "certifi>=2024.0.0",
]

[project.scripts]
crypto-monitor = "producer.main:run"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
